Corrected letter-spacing used unit to best option (em)

--- a/src/components/Header/NavButtons/RenderNavButtons.scss
+++ b/src/components/Header/NavButtons/RenderNavButtons.scss
@@ -6,7 +6,7 @@
   .button-text {
     font-variant: small-caps;
     text-transform: capitalize;
-    letter-spacing: 2px;
+    letter-spacing: 0.09em;
   }
 }
 
