--- a/src/components/Pages/Skills/SkillCards.scss
+++ b/src/components/Pages/Skills/SkillCards.scss
@@ -19,7 +19,7 @@
   span {
     padding: 0 0.7rem;
     font-size: 2.3rem;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.05em;
   }
   //RELATED SKILLS ONLY
   .wrapper__logo-text {
